@@ -63,5 +63,10 @@ void random_pseudo_bytes (unsigned char *buf, int n);
  *  This should not be used for purposes such as key generation.
  */
 
+void random_stir (void);
+/*
+ *  Stirs the PRNG entropy pool.
+ */
+
 
 #endif /* !RANDOM_H */
